crates/oxc_css_parser/tests/error/value/url/whitespace.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: invalid URL
  ┌─ whitespace.css:2:19
  │
2 │   background: url(a b);
  │                   ^


